Reduce Bob build overhead (#13212)
* fix tests

* performance related fixes stage one

* performance 2

* perf 3

* unused imports

* more changes

* small fixes

* update gradle

* a few more cleanups

* few more cleanups